--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -58,7 +58,7 @@
             android:id="@+id/titlefrag_et_team2_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints="name"
+            android:autofillHints="username"
             android:ems="10"
             android:fontFamily="@font/squada_one"
             android:hint="@string/team_hint"
