--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -16,8 +16,9 @@
 
         <TextView
             android:id="@+id/gamefrag_tv_team1_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/squada_one"
             android:text="@string/placeholder_team_name"
             android:textAlignment="center"
@@ -31,8 +32,9 @@
 
         <TextView
             android:id="@+id/gamefrag_tv_team2_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:fontFamily="@font/squada_one"
             android:text="@string/placeholder_team_name"
             android:textColor="@color/team2"
