--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -37,6 +37,7 @@
             android:layout_marginStart="8dp"
             android:fontFamily="@font/squada_one"
             android:text="@string/placeholder_team_name"
+            android:textAlignment="center"
             android:textColor="@color/team2"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
